# Region-QuadTree

./: Cargo.toml  README.md
examples/: plotting.rs  shader.wgsl  winit_probe.rs
experimental/: winit_probe.rs
src/: lib.rs  primitives.rs  region_qt.rs
src/region_qt/: primitives.rs
src/tests/: 1.p
