[package]
name = "region_quadtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
winit = { version = "0.29.4", features = ["rwh_05"]}
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
tokio = {version = "1.35.0", features = ["rt-multi-thread", "macros"]}
bytemuck = { version = "1.14.0", features = ["derive"] }
