[package]
name = "region_quadtree"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A lightweight Region Quadtree"
repository = "https://github.com/juaquin456/Region-QuadTree.git"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
piston_window = "0.131.0"
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"